--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -1,7 +1,10 @@
 django
 djangorestframework
 pytest
-psycopg2-binary==2.8.6
+psycopg2-binary
 python-dotenv
 djangorestframework-simplejwt==4.7.2
 django-cors-headers
+asgiref==3.2.10
+pytz==2020.1
+sqlparse==0.3.1
