--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,24 @@
 server {
     listen 80;
+
+    server_name 127.0.0.1;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /static/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location / {
+        proxy_pass http://web:8000;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -18,4 +33,5 @@ server {
         root   /var/html/frontend/;
       }
 
+    server_tokens   off;
 }
