--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ../backend/foodgram/foodgram/
+          context: ./backend/foodgram/foodgram/
           push: true
           tags: lzrdou/foodgram:latest
 
