--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - /var/lib/postgresql/data/
 
     env_file:
-      - ../.env
+      - ../backend/foodgram/.env
 
   web:
     image: lzrdou/foodgram:latest
@@ -16,7 +16,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ../.env
+      - ../backend/foodgram/.env
 
   frontend:
     build:
