--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,43 +1,47 @@
 version: '3.3'
-
 services:
   db:
-    image: postgres:13.0-alpine
-
+    image: postgres:13-alpine
     volumes:
       - /var/lib/postgresql/data/
-
     env_file:
-      - ../backend/foodgram/.env
-
-  web:
-    image: lzrdou/foodgram:latest
-    restart: always
+      - ./.env
+  backend:
+    build:
+      context: ../backend/foodgram/
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
-      - ../backend/foodgram/.env
-
+      - ./.env
   frontend:
-    image: lzrdou/foodgram_frontend:latest
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - ./frontend/:/app/result_build/
     depends_on:
-      - web
-
+      - backend
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "80:8080"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    restart: always
     depends_on:
       - frontend
-
 volumes:
+  postgres_data:
   static_value:
   media_value:
+  result_build:
