--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,24 +1,26 @@
 server {
     listen 80;
-
-    server_name 127.0.0.1;
-
+    server_tokens off;
+    server_name localhost;
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /static/ {
-        root /var/html/;
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
     }
-
-    location /media/ {
-        root /var/html/;
-    }
-
-    location / {
-        proxy_pass http://web:8000;
-    }
-
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -32,6 +34,8 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
-    server_tokens   off;
+    http {
+      client_max_body_size 20M;
+      server_tokens   off;
+    }
 }
