--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,45 +1,43 @@
 version: '3.3'
+
 services:
   db:
-    image: postgres:13-alpine
+    image: postgres:13.0-alpine
+
     volumes:
       - /var/lib/postgresql/data/
+
     env_file:
-      - ./.env
-  backend:
-    build:
-      context: ../backend/foodgram/
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - ../backend/foodgram/.env
+
+  web:
+    image: lzrdou/foodgram:latest
+    restart: always
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ../backend/foodgram/.env
+
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: lzrdou/foodgram_frontend:latest
     volumes:
-      - ./frontend/:/app/result_build/
+      - ../frontend/:/app/result_build/
     depends_on:
-      - backend
+      - web
+
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:8080"
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-    restart: always
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - frontend
+
 volumes:
   postgres_data:
   static_value:
