--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - frontend
+      - web
 
 volumes:
   postgres_data:
