--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,6 @@
 server {
     listen 80;
-    server_tokens off;
-    server_name localhost;
+    server_name 127.0.0.1;
     location /static/admin/ {
         root /var/html/;
     }
@@ -9,7 +8,7 @@ server {
         root /var/html/;
     }
     location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://web:8000/admin/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -19,7 +18,7 @@ server {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://web:8000;
     }
     location / {
         root /usr/share/nginx/html;
@@ -34,8 +33,7 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-    http {
-      client_max_body_size 20M;
-      server_tokens   off;
-    }
+    client_max_body_size 20M;
+    server_tokens   off;
+
 }
