--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:13.0-alpine
 
     volumes:
-      - /var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data/
 
     env_file:
       - ./.env
@@ -13,6 +13,9 @@ services:
   web:
     image: lzrdou/foodgram:latest
     restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -26,11 +29,11 @@ services:
       - web
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
-      - ./nginx/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
