--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_tokens off;
+    client_max_body_size 10M;
+    server_name 51.250.77.31;
     location /static/admin/ {
         root /var/html/;
     }
@@ -23,7 +25,7 @@ server {
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri /index.html =404;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -33,7 +35,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-    client_max_body_size 20M;
-    server_tokens   off;
-
 }
